<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:elevation="5dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.rey.material.widget.ImageView
                        android:id="@+id/imgToggle"
                        style="@style/Material.Drawable.Ripple.Wave.Light"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:adjustViewBounds="true"
                        android:src="@mipmap/drawer_toggle"/>

                </RelativeLayout>
            </android.support.v7.widget.Toolbar>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>
        </LinearLayout>
       <!-- <com.rey.material.widget.FloatingActionButton
            android:id="@+id/fabAdd"
            style="@style/Material.Drawable.Ripple.Wave.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="32dp"
            app:fab_backgroundColor="@color/colorPrimary"
            app:fab_iconSrc="@mipmap/fab_add"/>-->
        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/requests_floating_menu"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            fab:menu_labels_ellipsize="none"
            fab:menu_labels_singleLine="false"

            fab:menu_animationDelayPerItem="55"
            fab:menu_backgroundColor="@android:color/transparent"
            fab:menu_buttonSpacing="0dp"
            fab:menu_colorNormal="#da3c2f"
            fab:menu_colorPressed="#dc4b3f"

            fab:menu_colorRipple="#99d4d4d4"
            fab:menu_fab_size="normal"
            fab:menu_icon="@drawable/fab_add"
            fab:menu_labels_colorNormal="#333"
            fab:menu_labels_colorPressed="#444"
            fab:menu_labels_colorRipple="#66efecec"
            fab:menu_labels_cornerRadius="3dp"

            fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
            fab:menu_labels_margin="0dp"
            fab:menu_labels_maxLines="-1"
            fab:menu_labels_padding="8dp"
            fab:menu_labels_position="right"

            fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
            fab:menu_labels_showShadow="true"

            fab:menu_labels_textColor="#f2f1f1"
            fab:menu_labels_textSize="15sp"
            fab:menu_openDirection="up"
            fab:menu_shadowColor="#66aff198"
            fab:menu_shadowRadius="4dp"
            fab:menu_shadowXOffset="1dp"
            fab:menu_shadowYOffset="4dp"
            fab:menu_showShadow="true">
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/overtime_workFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/overwork"
                fab:fab_size="mini"
                fab:fab_label="@string/menu_fab_overwork"/>

            <!--<com.github.clans.fab.FloatingActionButton-->
                <!--android:id="@+id/dailymisFab"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@mipmap/dailymis"-->
                <!--android:maxWidth="72dp"-->
                <!--android:maxHeight="72dp"-->
                <!--fab:fab_size="mini"-->
                <!--fab:fab_label="@string/menu_fab_daily_mission"/>-->

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/hourlymisFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/hourlymis"
                android:maxWidth="72dp"
                android:maxHeight="72dp"
                fab:fab_size="mini"
                fab:fab_label="@string/menu_fab_hourly_mission"/>

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/hourlyLeaveFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/hourlyvac"
                android:maxWidth="72dp"
                android:maxHeight="72dp"
                fab:fab_size="mini"
                fab:fab_label="@string/menu_fab_hourly_vac"/>

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/dailyLeaveFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/dailyvac"
                android:maxWidth="72dp"
                android:maxHeight="72dp"
                fab:fab_size="mini"
                fab:fab_label="@string/menu_fab_daily_vac"/>

        </com.github.clans.fab.FloatingActionMenu>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:gravity="top"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_gravity="top"
                android:adjustViewBounds="true"
                android:alpha="0.4"
                android:background="@drawable/circle"
                android:contentDescription="@string/Profile"
                android:src="@mipmap/no_pic_user" />

            <com.mapna.mapnaapp.customViews.customTextView
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/customTextStyle"
                android:text="تست تست زاده" />

            <com.mapna.mapnaapp.customViews.customTextView
                android:id="@+id/txtDepartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/customTextStyle"
                android:text="واحد تست کننده گان" />


            <ListView
                android:id="@+id/listMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
